--- a/Machine_Learning_Training/pyproject.toml
+++ b/Machine_Learning_Training/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "seaborn>=0.12.0",
     "jupyter>=1.0.0",
     "ipykernel>=6.25.0",
+    "requests>=2.32.5",
 ]
 
 [dependency-groups]
